--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
-  <title>Gestão de Qualidade?</title>
+  <link rel="icon" href="assets/images/Uniesp logo.jpg" type="image/icon type">
+  <title>Gestão de Qualidade</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -612,7 +613,8 @@
                   É possível utilizar o produto em diversas plataformas com pequeno esforço de adaptação?
                 </td>
                 <td class="align-middle">Adaptabilidade</td>
-                <td class="align-middle">É fácil adaptar a outros ambientes sem aplicar outras ações ou meios além dos fornecidos para esta finalidade no software considerado?</td>
+                <td class="align-middle">É fácil adaptar a outros ambientes sem aplicar outras ações ou meios além dos
+                  fornecidos para esta finalidade no software considerado?</td>
               </tr>
 
               <tr>
