--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           <a id="card_confiabilidade" style="cursor: pointer;">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
               <div class="hidden-content">
-                <h4>Característica de Funcionalidade</h4>
+                <h4>Característica de Confiabilidade</h4>
               </div>
               <div class="showed-content">
                 <img src="assets/images/portfolio-image.png" alt="">
