--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </a>
         </div>
 
-        <div id="card_confiabilidade" class="col-lg-3 col-sm-6">
+        <div id="card_usabilidade" class="col-lg-3 col-sm-6">
           <a style="cursor: pointer;">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.5s">
               <div class="hidden-content">
@@ -293,6 +293,7 @@
         <div class="col-lg-10 align-self-center wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.25s">
           <div class="section-heading">
             <h2>CONSIDERAÇÕES FINAIS</h2>
+
             <p style="text-align: justify;">
               Algumas empresas ainda veem a qualidade apenas como obtenção de certificações e procedimentos
               internacionais. tentamos apresentar uma visão geral do processo de qualidade de software, abordando seus
@@ -303,9 +304,15 @@
               usabilidade, confiabilidade, funcionalidade e manutenibilidade, que são essenciais para os clientes e
               devem ser atendidos pela indústria de software.
             </p>
+
             <div class="phone-info">
-              <h4>Obrigado pela visita :)</h4>
+              <h4>Jogos de Gerenciamento de Qualidade</h4>
             </div>
+
+            <p style="text-align: justify;">
+              <a href="" style="color: lightblue; margin-right: 2rem;">asdasd</a>
+              <a href="" style="color: lightblue; margin-right: 2rem;"></a>
+            </p>
           </div>
         </div>
       </div>
@@ -353,7 +360,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub-característica</th>
+                <th class="text-nowrap">Sub característica</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -413,7 +420,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub-característica</th>
+                <th class="text-nowrap">Sub característica</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -461,7 +468,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub-característica</th>
+                <th class="text-nowrap">Sub característica</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -508,7 +515,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub-característica</th>
+                <th class="text-nowrap">Sub característica</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -550,7 +557,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub-característica</th>
+                <th class="text-nowrap">Sub característica</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -602,7 +609,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub-característica</th>
+                <th class="text-nowrap">Sub característica</th>
                 <th>Significado</th>
               </tr>
             </thead>
