--- a/index.html
+++ b/index.html
@@ -306,13 +306,8 @@
             </p>
 
             <div class="phone-info">
-              <h4>Jogos de Gerenciamento de Qualidade</h4>
+              <h4>Obrigado pela visita :)</h4>
             </div>
-
-            <p style="text-align: justify;">
-              <a href="" style="color: lightblue; margin-right: 2rem;">asdasd</a>
-              <a href="" style="color: lightblue; margin-right: 2rem;"></a>
-            </p>
           </div>
         </div>
       </div>
