--- a/index.html
+++ b/index.html
@@ -306,8 +306,13 @@
             </p>
 
             <div class="phone-info">
-              <h4>Obrigado pela visita :)</h4>
+              <h4>Jogos de Gerenciamento de Qualidade</h4>
             </div>
+
+            <p style="text-align: justify;">
+              <a href="" style="color: lightblue; margin-right: 2rem;">asdasd</a>
+              <a href="" style="color: lightblue; margin-right: 2rem;"></a>
+            </p>
           </div>
         </div>
       </div>
@@ -355,7 +360,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub característica</th>
+                <th class="text-nowrap">Sub categoria</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -415,7 +420,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub característica</th>
+                <th class="text-nowrap">Sub categoria</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -463,7 +468,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub característica</th>
+                <th class="text-nowrap">Sub categoria</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -510,7 +515,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub característica</th>
+                <th class="text-nowrap">Sub categoria</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -552,7 +557,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub característica</th>
+                <th class="text-nowrap">Sub categoria</th>
                 <th>Significado</th>
               </tr>
             </thead>
@@ -604,7 +609,7 @@
             <thead>
               <tr>
                 <th>Dúvida</th>
-                <th class="text-nowrap">Sub característica</th>
+                <th class="text-nowrap">Sub categoria</th>
                 <th>Significado</th>
               </tr>
             </thead>
