--- a/index.html
+++ b/index.html
@@ -335,17 +335,17 @@
           <p>Integrantes
 
             <br>
-            Pesquisa/Documentação: <a rel="nofollow" href="#" style="margin-right: 4rem;" target="_blank">
+            Pesquisa/Documentação: <a rel="nofollow" href="https://github.com/carolSPassos" style="margin-right: 4rem;" target="_blank">
               Ana Carolina Sousa Alves Passos
             </a>
-            Tester/Ideation Leader: <a rel="nofollow" href="#" style="margin-right: 4rem;" target="_blank">
+            Tester/Ideation Leader: <a rel="nofollow" href="https://github.com/GabrielCabral-DS" style="margin-right: 4rem;" target="_blank">
               Gabriel Cabral Darce Cardoso
             </a>
-            Tester/Ideation Leader: <a rel="nofollow" href="#" target="_blank"
+            Tester/Ideation Leader: <a rel="nofollow" href="https://github.com/jaohenriqu3/" target="_blank"
               style="margin-right: 4rem;">
               João Henrique Medeiros de Lucena
             </a>
-            Designer/Coder: <a rel="nofollow" href="#" target="_blank">
+            Designer/Coder: <a rel="nofollow" href="https://github.com/MagnoLevi" target="_blank">
               Magno Levi dos Santos
             </a>
           </p>
